Example_root/namespace_root.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-root
  labels:
    environment: root
