Example_root/policy_root_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "policy-root-binding"
spec:
  policyName: "policy-root"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: root
